# Calculatrice-Cpp

./: CMakeLists.txt  README.md  calc.cpp  main.cpp  makefile  moc_traducteur.cpp  traducteur.cpp  traducteur.h  vue.cpp  vue.h
